--- a/lvm_mcp.conf
+++ b/lvm_mcp.conf
@@ -127,5 +127,6 @@ admin_username =
 instance_type =
 image_ref =
 admin_password =
-
+skip_scenario_test_list = SoftwareConfigIntegrationTest, VolumeBackupRestoreIntegrationTest
+skip_functional_test_list = ReloadOnSighupTest, NotificationTest, StackCancelTest
 
