--- a/lvm_mcp.conf
+++ b/lvm_mcp.conf
@@ -1,116 +1,39 @@
-[network]
-default_network = 10.1.0.0/20
-public_router_id =
-public_network_id = 8f0d5200-1c6e-4fce-a602-3283a3dd7e28
-project_networks_reachable = false
-project_network_cidr = 10.1.0.0/20
-
-[DEFAULT]
-debug = True 
-log_file = tempest.log
-use_stderr = False
-use_syslog = False
-
-[oslo_concurrency]
-lock_path = /opt/stack/data/tempest
-
-[compute]
-max_microversion = latest
-flavor_ref_alt = 84
-flavor_ref = 42
-image_ref_alt = 5b082163-8adc-4f5c-bdf9-532ff4f57ab3
-image_ref = 5b082163-8adc-4f5c-bdf9-532ff4f57ab3
-build_timeout = 196
+[image-feature-enabled]
+api_v2 = True
+api_v1 = False
 
 [volume]
-max_microversion = latest
-build_timeout = 196
-
-[identity]
-auth_version = v3
-admin_domain_scope = True
-user_unique_last_password_count = 2
-user_lockout_duration = 10
-user_lockout_failure_attempts = 2
-uri_v3 = http://198.72.124.125/identity/v3
-uri = http://198.72.124.125/identity/v2.0/
-
-[auth]
-use_dynamic_credentials = True
-tempest_roles = creator
-admin_domain_name = Default
-admin_project_name = admin
-admin_password = secretadmin
-admin_username = admin
-
-[identity-feature-enabled]
-security_compliance = True
-api_v2_admin = False
-api_v2 = False
-
-[image]
-http_image = http://git.openstack.org/static/openstack.png
-
-[image-feature-enabled]
-api_v1 = False
-deactivate_image = True
-
-[validation]
-network_for_ssh = private
-image_ssh_user = cirros
-ssh_timeout = 196
-ip_version_for_ssh = 4
-run_validation = True
-connect_method = floating
-
-[compute-feature-enabled]
-swap_volume = True
-attach_encrypted_volume = True
-live_migrate_back_and_forth = False
-block_migration_for_live_migration = False
-change_password = False
-live_migration = False
-resize = True
-personality = False
-
-[network-feature-enabled]
-api_extensions = address-scope,agent,allowed-address-pairs,auto-allocated-topology,availability_zone,binding,default-subnetpools,dhcp_agent_scheduler,dvr,ext-gw-mode,external-net,extra_dhcp_opt,extraroute,flavors,hm_max_retries_down,l3-flavors,l3-ha,l3_agent_scheduler,l7,lb-graph,lb_network_vip,lbaas_agent_schedulerv2,lbaasv2,multi-provider,net-mtu,net-mtu-writable,network-ip-availability,network_availability_zone,pagination,port-security,project-id,provider,quota_details,quotas,rbac-policies,revision-if-match,router,router_availability_zone,security-group,service-type,shared_pools,sorting,standard-attr-description,standard-attr-revisions,standard-attr-tag,standard-attr-timestamp,subnet-service-types,subnet_allocation,tag,tag-ext,trunk,trunk-details
-port_security = True
-ipv6_subnet_attributes = True
-ipv6 = True
-
-[scenario]
-img_file = cirros-0.3.5-x86_64-disk.img
-img_dir = /opt/stack/new/devstack/files
+build_timeout = 600
+storage_protocol = iSCSI
 
 [volume-feature-enabled]
-api_extensions = all
+backup = False
+
+[compute]
+build_timeout = 600
+min_microversion = 2.1
+max_microversion = 2.42
+min_compute_nodes = 1
+
+[compute-feature-enabled]
+live_migration = False
+
+[dns_feature_enabled]
+api_v2_quotas = True
+api_v2 = True
 api_v1 = False
-api_v3 = True
-extend_attached_volume = True
-manage_volume = True
-manage_snapshot = True
+api_v2_root_recordsets = True
+api_admin = False
+bug_1573141_fixed = True
 
-[service_available]
-heat_plugin = True
-barbican = False
-trove = False
-ironic = False
-sahara = False
-horizon = False
-ceilometer = True
-heat = True
-swift = True
-cinder = True
-neutron = True
-nova = True
-glance = True
+[network-feature-enabled]
+port_security = True
 
-[object-storage-feature-enabled]
-discoverable_apis = all
+[orchestration]
+max_template_size=5440000
+max_resources_per_stack=20000
+max_json_body_size=10880000
 
-[telemetry]
-alarm_granularity = 60
 
 [heat_plugin]
 project_domain_name =
